[package]
name = "grumkin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false, optional = true }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [
    "scalar_field",
    "curve",
] }

[dev-dependencies]

[features]
default = []
std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bn254/std"]
