[package]
name = "noir_grumpkin"
version = "0.1.0"
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
license = "MIT"
rust-version = "1.66"
repository = "https://github.com/noir-lang/grumpkin/"
description = "An implementation for the grumpkin curve"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-bn254 = { version = "^0.4.0", default-features = false }

[dev-dependencies]

[features]
default = ["curve"]
std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bn254/std"]

curve = ["scalar_field", "ark-bn254/curve"]
scalar_field = []
